--- a/AkhmerovaAutoservice/ServicePage.xaml
+++ b/AkhmerovaAutoservice/ServicePage.xaml
@@ -18,6 +18,7 @@
         <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right">
             <TextBlock Name="TBCount" FontSize="20" Height="20"></TextBlock>
             <TextBlock Name="TBAllRecords" FontSize="20" Height="20"></TextBlock>
+            
             <Button Name="LeftDirButton" Content="&lt;" Width="20" Height="20"
                     Click="LeftDirButton_Click"></Button>
             <ListBox FontSize="20" x:Name="PageListBox" MouseUp="PageListBox_MouseUp">
@@ -87,6 +88,7 @@
                         <StackPanel Grid.Column="1" Grid.Row="3" Orientation="Horizontal">
                             <Button Name="EditButton" Content="редактировать" Margin="2" Click="EditButton_Click"></Button>
                             <Button Name="DeleteButton" Content="удалить" Margin="2" Click="DeleteButton_Click"></Button>
+                            <Button x:Name="SignUpButton" Content="записать" Margin="2" Click="SignUpButton_Click"></Button>
                         </StackPanel>
                     </Grid>
                 </DataTemplate>
