--- a/AkhmerovaAutoservice/SignUpPage.xaml
+++ b/AkhmerovaAutoservice/SignUpPage.xaml
@@ -42,7 +42,7 @@
             <TextBox Name="TBStart" Height="30" Width="200" FontSize="20"
                      TextChanged="TBStart_TextChanged"></TextBox>
             <TextBlock Text="Время окончания:" FontSize="15" Height="30" Margin="20"></TextBlock>
-            <TextBox Name="TBEnd" Height="30" Width="200" FontSize="20"></TextBox>
+            <TextBox Name="TBEnd" Height="30" Width="200" FontSize="20" IsReadOnly="True"></TextBox>
         </StackPanel>
         <Button Name="SaveButton" Content="Сохранить" Grid.Row="5"
                 Grid.Column="0" Grid.ColumnSpan="2" Click="SaveButton_Click"></Button>
